--- a/index.html
+++ b/index.html
@@ -87,22 +87,22 @@
    
     <div class="features">
         <div class="feature">
-            <img src="./img/shipping.png" alt="" class="featureIcon">
+            <img src="shipping.jpg" alt="" class="featureIcon">
             <span class="featureTitle">FREE SHIPPING</span>
             <span class="featureDesc">Free worldwide shipping on all orders.</span>
         </div>
         <div class="feature">
-            <img class="featureIcon" src="./img/return.png" alt="">
+            <img class="featureIcon" src="30_days.jpg" alt="">
             <span class="featureTitle">30 DAYS RETURN</span>
             <span class="featureDesc">No question return and easy refund in 14 days.</span>
         </div>
         <div class="feature">
-            <img class="featureIcon" src="./img/gift.png" alt="">
+            <img class="featureIcon" src="gift.png" alt="">
             <span class="featureTitle">GIFT CARDS</span>
             <span class="featureDesc">Buy gift cards and use coupon codes easily.</span>
         </div>
         <div class="feature">
-            <img class="featureIcon" src="./img/contact.png" alt="">
+            <img class="featureIcon" src=".contact.jpg" alt="">
             <span class="featureTitle">CONTACT US!</span>
             <span class="featureDesc">Keep in touch via email and support system.</span>
         </div>
