--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
    
     <div class="features">
         <div class="feature">
-            <img src="shipping.jpg" alt="" class="featureIcon">
+            <img src="shipping.png" alt="" class="featureIcon">
             <span class="featureTitle">FREE SHIPPING</span>
             <span class="featureDesc">Free worldwide shipping on all orders.</span>
         </div>
