--- a/index.html
+++ b/index.html
@@ -97,12 +97,12 @@
             <span class="featureDesc">No question return and easy refund in 14 days.</span>
         </div>
         <div class="feature">
-            <img class="featureIcon" src="gift.png" alt="">
+            <img class="featureIcon" src="gift.jpg" alt="">
             <span class="featureTitle">GIFT CARDS</span>
             <span class="featureDesc">Buy gift cards and use coupon codes easily.</span>
         </div>
         <div class="feature">
-            <img class="featureIcon" src=".contact.jpg" alt="">
+            <img class="featureIcon" src="contact.jpg" alt="">
             <span class="featureTitle">CONTACT US!</span>
             <span class="featureDesc">Keep in touch via email and support system.</span>
         </div>
