--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <nav id="nav">
         <div class="navTop">
             <div class="navItem">
-                <img src="./img/sneakers.png" alt="">
+                <img src="sneaker.jpg" alt="">
             </div>
             <div class="navItem">
                 <div class="search">
                     <input type="text" placeholder="Search..." class="searchInput">
-                    <img src="./img/search.png" width="20" height="20" alt="" class="searchIcon">
+                    <img src="search.jpg" width="20" height="20" alt="" class="searchIcon">
                 </div>
             </div>
             <div class="navItem">
