--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="slider">
         <div class="sliderWrapper">
             <div class="sliderItem">
-                <img src="air.jpg" alt="" class="sliderImg">
+                <img src="imgage.jpg" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
                 <h1 class="sliderTitle">AIR FORCE</br> NEW</br> SEASON</h1>
                 <h2 class="sliderPrice">$119</h2>
@@ -109,7 +109,7 @@
     </div>
 
     <div class="product" id="product">
-        <img src="./img/air.png" alt="" class="productImg">
+        <img src="air.jpg" alt="" class="productImg">
         <div class="productDetails">
             <h1 class="productTitle">AIR FORCE</h1>
             <h2 class="productPrice">$199</h2>
